Fix text selection, remove notes subtitle, and polish content
- Fixed text selection highlighting issue (solid blue background instead of gradient)
- Removed subtitle from notes page for cleaner design
- Comprehensive content polish across all notes:
  - Fixed grammar issues and subject-verb agreement
  - Corrected punctuation and spelling errors
  - Improved word choice and clarity
  - Added missing HTML structure tags
  - Removed redundant phrases and awkward phrasing

--- a/writings/five-days-at-sundance.html
+++ b/writings/five-days-at-sundance.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-    <head>
+<html lang="en">
+<head>
         <meta charset="utf-8">
         <title>Five days at Sundance - Ani Mohan</title>
         <meta property="og:title" content="Five days at Sundance - Ani Mohan" />
@@ -125,9 +126,9 @@
             <br><br>
             <b>Church and the Fourth Estate</b>: 4.5 stars. Documentary short about the press and legal battles surrounding the first Boy Scouts sexual assault case. Raised two thought-provoking questions. How do you both care deeply for an institution while exposing its dark underbelly? How do we revive local journalism?
             <br><br>
-            <b>Palm Springs</b>: 4 stars. Rom com with a twist. I hate formulaic rom coms, but I love ones that subvert the genre. I won’t spoil it here. Palm Springs is absurd, philosophical, and absurd. It’s also gorgeously shot.
+            <b>Palm Springs</b>: 4 stars. Rom com with a twist. I hate formulaic rom coms, but I love ones that subvert the genre. I won’t spoil it here. Palm Springs is absurd, philosophical, and fun. It’s also gorgeously shot.
             <br><br>
-            <b>Do Not Split</b>: 4 stars. Documentary short about the Hong Kong protests. The (Norweigian) director attended protests for months and stockpiled a ton of raw, front-line footage. Prior to watching the film, I didn’t realize how many Hong Kong natives supported mainland China.
+            <b>Do Not Split</b>: 4 stars. Documentary short about the Hong Kong protests. The (Norwegian) director attended protests for months and stockpiled a ton of raw, front-line footage. Prior to watching the film, I didn’t realize how many Hong Kong natives supported mainland China.
             <br><br>
             <b>Abortion Helpline, This is Lisa</b>: 4.5 stars. Documentary short of counselors responding to calls at a Philadelphia abortion hotline. Endless barrage of women calling for financial help to cover abortion costs. Gut-wrenching look at how U.S. legislation bars abortion access for women who need it the most.
             <br><br>
