--- a/writings/how-clubhouse-evolved-from-gaming.html
+++ b/writings/how-clubhouse-evolved-from-gaming.html
@@ -152,7 +152,7 @@
     audio room afterwards and have a meaningful conversation based on what you learned from the director.</p>
   <p>To me, this is the most exciting promise of Clubhouse: a platform for anyone with an internet connection to have
     live conversations based on shared interests, regardless of nationality, income, or literacy.</p>
-        <p>What do you think? Let me on know on <a href="https://twitter.com/ani_c_mohan">Twitter</a>. Or, find me on
+        <p>What do you think? Let me know on <a href="https://twitter.com/ani_c_mohan">Twitter</a>. Or, find me on
           Clubhouse.</p>
       </div>
     </article>
