--- a/writings/list-of-dialectics.html
+++ b/writings/list-of-dialectics.html
@@ -57,7 +57,7 @@
   <p>I've collected a few of my favorites below. I often explain them via tech startups and business, which I think
     about the most. They're applicable across other domains too.</p>
   <h2>1. Optimism <> Pessimism</h2>
-  <p>Startups requires incredible optimism. You must have inordinate conviction that your vision for the business will
+  <p>Startups require incredible optimism. You must have inordinate conviction that your vision for the business will
     come to bear. It's the only way to convince yourself, employees, investors, partners, and customers to part with
     time and money. But things will likely get really tough. 90% of startups fail. You must remain skeptical you will
     defy daunting odds. You don't want to waste your (or anyone else's) time working on something that won't succeed.
@@ -69,8 +69,7 @@
     attached to the fruits of your labor, you're leaving your mood and self-esteem to the whims of chance.</p>
   <h2>3. Explore <> Exploit</h2>
   <p>The world is rich and varied. There's always something new to learn, see, feel, and taste. And you might enjoy
-    those
-    new things more than you've ever enjoyed anything you've experienced. It's impossible to know unless you explore
+    those new things more than you've ever enjoyed anything you've experienced. It's impossible to know unless you explore
     further. But you already have a sense of what you prefer and what you don't. You don't want to waste your precious
     time on things that won't give you joy. So, you might as well double down on your favorites.</p>
   <h2>4. Macro <> Micro</h2>
@@ -81,9 +80,8 @@
     priorities.</p>
   <h2>5. Quantitative <> Qualitative</h2>
   <p>Startups force you to build something customers really, really want. Retention is a great measure of this. What %
-    of
-    the customers who use your product this week will use it next week? Measuring retention forces you to be honest with
-    yourself about your product's value. But retention don't tell you why people want your product. Instead, spend 10
+    of the customers who use your product this week will use it next week? Measuring retention forces you to be honest with
+    yourself about your product's value. But retention doesn't tell you why people want your product. Instead, spend 10
     minutes speaking with 5 people who've ever tried your product. In under an hour, you'll get fresh ideas for who
     might want your product and why.</p>
   <h2>6. Long term <> Short term</h2>
@@ -91,7 +89,7 @@
     and disregard the noise of the remaining 80%.  Thinking over a long time horizon leads you to value small, boring,
     compounding benefits. But life is short. The future might never come - it exists only in your imagination. The
     present is tangible and real. Savor it in as much detail as you can.</p>
-  <h2>7. Togetherness <> Solitude</b></h2>
+  <h2>7. Togetherness <> Solitude</h2>
   <p>What's the use of learning something new, feeling something profound, or making something grand if you can't share
     it with others? We're social animals, hardwired to crave connection and distinguished by our ability to cooperate
     with others. But, nobody else can read your mind or feel your emotions, try as they might. Making sense of it all is
