--- a/writings/making-posters.html
+++ b/writings/making-posters.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-    <head>
+<html lang="en">
+<head>
         <meta charset="utf-8">
         <title>Making posters - Ani Mohan</title>
         <meta property="og:title" content="Making posters - Ani Mohan" />
@@ -57,11 +58,11 @@
             <br><br>
             I begin by considering what I want a poster to mean to me. Since I stare at my walls every day, my posters can remind me of principles I care about. When looking at my posters, others might see an ordinary image while I’d appreciate their hidden significance. 
             <br><br>
-            For example, an important principle to me is to “zoom out”. “Zoom out” reminds me to shift  perspective and escape the minutiae of everyday anxieties. This principle became the foundation of my first poster. 
+            For example, an important principle to me is to “zoom out”. “Zoom out” reminds me to shift perspective and escape the minutiae of everyday anxieties. This principle became the foundation of my first poster. 
             <br><br>
             Next, I consider which visual metaphors would best represent a principle. For my first poster, I thought a great representation of “zoom out” would be a view of earth from a faraway planet. I’ll refer to this poster as <a href="https://en.wikipedia.org/wiki/Pale_Blue_Dot" target="_blank">Pale Blue Dot</a>.
             <br><br>
-            Finally, I think about the visual style of the poster. I consider styles that are straightforward for a beginner to implement. I also think about repurposing my favorite elements of others’ graphic design, such as contrasting colors curvy lines. For Pale Blue Dot, I decided to create it in the style of vintage imagery reinterpreted though a minimalist lens.
+            Finally, I think about the visual style of the poster. I consider styles that are straightforward for a beginner to implement. I also think about repurposing my favorite elements of others’ graphic design, such as contrasting colors and curvy lines. For Pale Blue Dot, I decided to create it in the style of vintage imagery reinterpreted through a minimalist lens.
             <br><br>
             <b class="writing-section-lead">Make a mood board</b>
             <br><br>
@@ -122,7 +123,7 @@
             <br><br>
             The process of making Pale Blue Dot was incredibly fun and empowering. Now, I’m excited to make more posters.
             <br><br>
-            Having a tangible, purposeful goal (i.e. prettying my room) gave me the motivation to get started. For future creative projects, I’ll keep in the mind the value of setting a clear, meaningful intention before starting.
+            Having a tangible, purposeful goal (i.e. prettying my room) gave me the motivation to get started. For future creative projects, I’ll keep in mind the value of setting a clear, meaningful intention before starting.
             <br><br>
             If you have any thoughts, comments, or ideas based on anything I shared, please 
             reach out via <a target="_blank" href="https://twitter.com/ani_c_mohan">Twitter</a> and let’s discuss!
