--- a/writings/team-market-product.html
+++ b/writings/team-market-product.html
@@ -50,7 +50,7 @@
       </header>
       <div class="note-content">
   <p>When I advise or invest in early stage startups, I first consider the team, then the market, and only after that
-    the product </p>
+    the product.</p>
   <h2>You often pivot the product</h2>
   <p>I didn't start that way. I used to start with the product. What does it do? What new technologies does it use? How
     well designed is it?</p>
@@ -65,7 +65,7 @@
   <p>At the core of that first product was an assumption that users want to see where their money is going more easily.
     For the vast majority of people, this assumption turned out to be untrue. When we talked to the (few) users who used
     Teller again, we realized what they actually wanted was a better way to monitor their bank account balance.</p>
-  <p>We re-focused the product to display bank account balances from and center. But again, users rarely came back to
+  <p>We re-focused the product to display bank account balances front and center. But again, users rarely came back to
     the product.</p>
   <p>When we talked to users again, we began to understand that what they actually wanted was a better way to save. We
     built a new version of the product that automatically redirected money from users' checking accounts to savings
@@ -109,7 +109,7 @@
     Western countries. And many users in India are on older, lower-powered phones. Since our games were built as web
     applications, they were often much smaller than games available on the App Store or Play Store.</p>
   <p>We had unexpectedly stumbled onto a massive opportunity: building a gaming platform for billions of users coming
-    online to the internet for the time across India, Indonesia, Brazil, Nigeria, Mexico, and other emerging markets.
+    online to the internet for the first time across India, Indonesia, Brazil, Nigeria, Mexico, and other emerging markets.
     We've been focused on that ever since.</p>
   <p>Twice, we pivoted the market (and the product accordingly) until we found a viable business.</p>
   <h2>Team above all else</h2>
@@ -118,7 +118,7 @@
   <p>First, aligning on goals. My co-founder and I didn't just want to tinker with the latest technology or build a
     particular product. We wanted to build a successful consumer business. This gave us simple criteria to gauge whether
     an idea was worth pursuing. Did it serve end consumers? Did the business model make sense?</p>
-  <p>Second, communicating candidly. We looked at key metrics every day. We shifted away from verbal conservations and
+  <p>Second, communicating candidly. We looked at key metrics every day. We shifted away from verbal conversations and
     towards written memos when debating strategy and reviewing decisions. These practices prevented us from deluding
     ourselves and each other for too long when something wasn't working.</p>
   <p>Third, thinking probabilistically. We assigned probability weights to different possible outcomes for various
@@ -128,7 +128,7 @@
   <p>And fourth, having fun! We knew it'd be a slog. Without enjoying the journey we wouldn't have persisted. We joked
     around, hosted fun events, and made fun of ourselves constantly. Of course, working in gaming helped here.</p>
   <p>This isn't an all-encompassing list, but I hope you get the point.</p>
-  <p>I've come to realize the team matters above all sense. You can (and almost certainly will) change the product. You
+  <p>I've come to realize the team matters above all else. You can (and almost certainly will) change the product. You
     might even change what market you're serving. But you're unlikely to change the dynamics of the team. The only way
     to really do that is to shuffle up the founding team. It's always an option, but it's crushing to the morale of the
     company and significantly increases the chances of failure.</p>
